[tool.poetry]
name = "cbm_runner"
version = "0.1.0"
description = "An interface between the CBM CFS3, libcbm_py, model and the GOBLIN model."
authors = ["Colm Duffy"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.0"
numpy = "^1.21.0"
sqlalchemy = "^1.4.0"
libcbm  = {git = "https://github.com/colmduff/libcbm_py.git", branch = "main"}


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"